...
                app:iconifiedByDefault="false"
                app:queryHint="@string/search_with_event_name_text" />


        </LinearLayout>
        <ListView
            android:id="@+id/browse_event_list"
            android:layout_width="match_parent"
            android:layout_height="570dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:longClickable="true" >

...
