...
    <string name="zero_counter_text">0</string>
    <string name="users_have_checked_into_your_event_text">users have checked into your event!</string>
    <string name="remove_picture_text">Remove Picture</string>
    <string name="check_in_text">Check In</string>
    <string name="allow_scandroid_to_access_your_camera_roll_text">Allow scANDROID to access your Camera Roll?</string>
    <string name="users_text">Users</string>
    <string name="events_text">Events</string>
    <string name="fragment_event_title">Event Title</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_with_event_name_text">Search with event name</string>
    <string name="your_name">Your Name</string>
    <string name="empty">Empty</string>
...
