...
            app:layout_constraintVertical_bias="0.0" >

        </RelativeLayout>


        <CheckBox
            android:id="@+id/promise_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="12dp"
            android:text="I promise to attend this event"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fetch_event_description" />

        <ImageView
            android:id="@+id/create_event_change_poster"
            android:layout_width="350dp"
            android:layout_height="175dp"
            app:layout_constraintBottom_toBottomOf="@+id/blue_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.507"
            app:layout_constraintStart_toStartOf="@+id/blue_background"
...
