...
                android:layout_weight="1"
                android:fontFamily="@font/inter_medium"
                android:text="@string/enter_limit_string"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/enter_limit_editText"
                android:layout_width="200dp"
                android:layout_height="48dp"
                android:layout_marginHorizontal="15dp"
                android:layout_weight="1"
                android:ems="10"
                android:fontFamily="@font/inter_medium"
...
                android:textAllCaps="false"

                android:textColor="@color/white"
                android:textSize="18sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/confirm_button_limit_attendees"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rectangle_button"
                android:paddingHorizontal="5dp"
                android:text="@string/confirm_button_attendee_limit"
...
