...
            android:layout_alignParentEnd="true"
            android:layout_gravity="center"
            android:text="@string/choose_an_image_text"
            android:textAlignment="center"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/camera_roll_access_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.171">
        </TextView>

...
